fix: restore block-based bold text hack to fix density layout shift

--- a/packages/components/src/components/tab-item/tab-item.scss
+++ b/packages/components/src/components/tab-item/tab-item.scss
@@ -37,6 +37,19 @@ dbtabitem {
 
 		@include helpers.display(block);
 
+		&::after {
+			content: attr(data-label);
+			font-weight: 700;
+			display: block;
+			block-size: 0;
+			font-size: 0;
+			line-height: 0;
+			padding: 0;
+			margin: 0;
+			overflow: hidden;
+			visibility: hidden;
+		}
+
 		&[data-icon]:not([data-show-icon="false"]) {
 			&::before {
 				@extend %icon;
